--- a/site/app/features/schedule/styles/index.scss
+++ b/site/app/features/schedule/styles/index.scss
@@ -1,3 +1,9 @@
 .schedule {
   margin: 20px 20px 0 20px;
+
+  .day-select {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
